--- a/index.html
+++ b/index.html
@@ -37,9 +37,15 @@
                 Ano da criação: 2024</p>
     </div>
 
-    <div class="contato">
+    <footer>
         <h2>Contato</h2>
-        <p>Seus dados de contato: e-mail, telefone, redes sociais.</p>
-    </div>
+        <p>
+            <strong>Email:</strong> seu_email@email.com<br>
+            <strong>Telefone:</strong> (12) 3456-7890<br>
+            <strong>Redes sociais:</strong>
+            <a href="https://www.instagram.com/seu_instagram">Instagram</a>
+            <a href="https://www.facebook.com/seu_facebook">Facebook</a>
+        </p>
+    </footer>
 </body>
 </html>
