--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <footer>
         <h2>Contato</h2>
         <p>
-            <strong>Email:</strong> seu_email@email.com<br>
-            <strong>Telefone:</strong> (12) 3456-7890<br>
+            <strong>Email:</strong> nunaemmovimento@email.com<br>
+            <strong>Telefone:</strong> (81) 995750699<br>
             <strong>Redes sociais:</strong>
-            <a href="https://www.instagram.com/seu_instagram">Instagram</a>
-            <a href="https://www.facebook.com/seu_facebook">Facebook</a>
+            <a href="https://www.instagram.com/nunaemmovimento/">Instagram</a>
+            
         </p>
     </footer>
 </body>
