--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@
                 Evitar qualquer tipo de líquido seja pra limpar ou deixar bater da obra. 
                 Não expor diretamente ao sol ou em ambiente muito úmido. 
                 Mantenha em local seco arejado. 
-                Para sua limpeza use apenas um pano seco, sem aplicar nenhum tipo de produto químico.</p>
+                Para sua limpeza use apenas um pano seco, sem aplicar nenhum tipo de produto químico.<br></br> 
+                Essa obra foi criada e executada pelo artesão  e possui um certificado autêntico é original. 
+                Título da obra: “Lovely “
+                Altura 1.26, largura 60 centímetros 
+                Madeira utilizada: jaqueira. 
+                Ano da criação: 2024       </p>
         </div>
     </div>
 
     <div class="informacoes-artista">
         <h2>Sobre o Artista</h2>
-        <p> Essa obra foi criada e executada pelo artesão Rivaldo do Espírito Santo Júnior ( Nuna) e possui um certificado autêntico é original. 
-                Título da obra: “Lovely “
-                Altura 1.26, largura 60 centímetros 
-                Madeira utilizada: jaqueira. 
-                Ano da criação: 2024</p>
+        <p>Rivaldo do Espírito Santo Júnior ( Nuna) </p>
     </div>
 
     <footer>
