--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 Evitar qualquer tipo de líquido seja pra limpar ou deixar bater da obra. 
                 Não expor diretamente ao sol ou em ambiente muito úmido. 
                 Mantenha em local seco arejado. 
-                Para sua limpeza use apenas um pano seco, sem aplicar nenhum tipo de produto químico.<br></br> 
+                Para sua limpeza use apenas um pano seco, sem aplicar nenhum tipo de produto químico. 
                 Essa obra foi criada e executada pelo artesão  e possui um certificado autêntico é original. 
                 Título da obra: “Lovely “
                 Altura 1.26, largura 60 centímetros 
